--- a/scss/_historia.scss
+++ b/scss/_historia.scss
@@ -10,7 +10,7 @@ div.alex{
     p{
         margin: 75px;
         padding: 100px;
-        color: white;
+        color: $color2;
         margin-left: 0px;
         display: flex;
         border-radius: 15px;
@@ -33,7 +33,7 @@ div.jamie{
     p{
         margin: 0px;
         padding: 50px;
-        color: white;
+        color: $color2;
         margin-left: 0px;
         display: flex;
         border-radius: 15px;
@@ -55,7 +55,7 @@ div.matt{
     p{
         margin: 0px;
         padding: 50px;
-        color: white;
+        color: $color2;
         margin-left: 0px;
         display: flex;
         border-radius: 15px;
@@ -78,7 +78,7 @@ div.nick{
     p{
         margin: 0px;
         padding: 50px;
-        color: white;
+        color: $color2;
         margin-left: 580px;
         margin-top: 320px;
         border-radius: 15px;
