--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,11 +1,15 @@
+$color1:#000000;
+$color2:#ffffff;
+
 body{
-    background-color: black;
+    background-color: $color1;
 }
+
 h1{
-    color: whitesmoke;
+    color: $color2;
 }
 .titulo{
-    color: white;
+    color: $color2;
     font-size: 5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
@@ -19,7 +23,7 @@ h1{
     p{
         margin: 0px;
         padding: 65px;
-        color: white;
+        color: $color2;
         margin-left: 0px;
         display: inline-block;
         border-radius: 5px;
